[gd_scene load_steps=18 format=3 uid="uid://c1kieko08207m"]

[ext_resource type="Script" path="res://scenes/jogo_principal/jogo_principal.gd" id="1_56i3e"]
[ext_resource type="Theme" uid="uid://dejubhbtuxstt" path="res://scenes/jogo_principal/jogo_principal.tres" id="1_u5hf3"]
[ext_resource type="Texture2D" uid="uid://11emcp3oxcn0" path="res://assets/background.png" id="2_1oknb"]
[ext_resource type="AudioStream" uid="uid://trmfjw1qgyrb" path="res://assets/sounds/tap_right/tap.wav" id="2_4ap5s"]
[ext_resource type="PackedScene" uid="uid://x8gr2llucnrv" path="res://scenes/alvos/donut/donut.tscn" id="2_33l3o"]
[ext_resource type="Texture2D" uid="uid://ckybi4o6hyssl" path="res://assets/current_target_box.png" id="3_jvdrf"]
[ext_resource type="AudioStream" uid="uid://baiwynv4mx0pu" path="res://assets/sounds/tap_wrong/tap_wrong.wav" id="3_p3tf5"]
[ext_resource type="PackedScene" uid="uid://bi3p0yl1fdvr0" path="res://scenes/alvos/hambúrguer/hambúrguer.tscn" id="5_fjpxd"]
[ext_resource type="Texture2D" uid="uid://cinv4qjjnqqkr" path="res://assets/current_target_box_hollow.png" id="6_40f5l"]
[ext_resource type="PackedScene" uid="uid://b4mh3kec83g0j" path="res://scenes/alvos/pizza/pizza.tscn" id="6_51a2h"]
[ext_resource type="PackedScene" uid="uid://s0jn048bopew" path="res://scenes/alvos/cupcake/cupcake.tscn" id="7_0dske"]
[ext_resource type="PackedScene" uid="uid://5g0i2x5vfdmt" path="res://scenes/alvos/sorvete/sorvete.tscn" id="7_6ogpa"]
[ext_resource type="PackedScene" uid="uid://bjfk2g5gmsslm" path="res://scenes/alvos/picolé/picolé.tscn" id="7_30t43"]
[ext_resource type="PackedScene" uid="uid://vj7r1qeedxms" path="res://scenes/alvos/uva/uva.tscn" id="7_ll5sl"]
[ext_resource type="PackedScene" uid="uid://c1qxkoehka503" path="res://scenes/alvos/ovo_frito/ovo_frito.tscn" id="7_nnegn"]
[ext_resource type="PackedScene" uid="uid://cj3bcuy8meobn" path="res://scenes/alvos/brócolis/brócolis.tscn" id="7_oa5at"]
[ext_resource type="PackedScene" uid="uid://crxyuw6h3xx20" path="res://scenes/alvos/maçã/maçã.tscn" id="8_wa8v5"]

[node name="JogoPrincipal" type="Node2D"]
script = ExtResource("1_56i3e")

[node name="TapRight" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_4ap5s")
bus = &"SFX"

[node name="TapWrong" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_p3tf5")
bus = &"SFX"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -340.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = 80.0
grow_horizontal = 0
theme = ExtResource("1_u5hf3")
theme_override_font_sizes/font_size = 48
text = "Pontos: 0"
horizontal_alignment = 2

[node name="AjudaAlvo" type="TextureRect" parent="CanvasLayer"]
offset_top = -150.0
offset_right = 150.0
texture = ExtResource("6_40f5l")
expand_mode = 2

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchor_right = 0.13
anchor_bottom = 0.231
offset_right = 0.23999
offset_bottom = 0.311996

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control"]
layout_mode = 0
offset_right = 150.0
offset_bottom = 150.0
texture = ExtResource("3_jvdrf")
expand_mode = 2

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(8000, 4500)
scale = Vector2(1000, 1000)
texture = ExtResource("2_1oknb")

[node name="Picolé" parent="." instance=ExtResource("7_30t43")]
z_index = 10
position = Vector2(0, -113.6)

[node name="Brócolis" parent="." instance=ExtResource("7_oa5at")]
z_index = 9
position = Vector2(0, -98.7)

[node name="Cupcake" parent="." instance=ExtResource("7_0dske")]
z_index = 8
position = Vector2(0, -101)

[node name="Sorvete" parent="." instance=ExtResource("7_6ogpa")]
z_index = 7
position = Vector2(0, -128.4)

[node name="Uva" parent="." instance=ExtResource("7_ll5sl")]
z_index = 6
position = Vector2(0, -97.6)

[node name="Maçã" parent="." instance=ExtResource("8_wa8v5")]
z_index = 5
position = Vector2(0, -119.375)

[node name="OvoFrito" parent="." instance=ExtResource("7_nnegn")]
z_index = 4
position = Vector2(0, -114)

[node name="Pizza" parent="." instance=ExtResource("6_51a2h")]
z_index = 3
position = Vector2(0, -113.5)

[node name="Hambúrguer" parent="." instance=ExtResource("5_fjpxd")]
z_index = 2
position = Vector2(0, -93)

[node name="Donut" parent="." instance=ExtResource("2_33l3o")]
z_index = 1
position = Vector2(0, -93.6)
